@@ -851,6 +851,17 @@
 				</listitem>
 
 			</varlistentry>
+			 <varlistentry>
+				<term><parameter>web_style</parameter></term>
+				 <listitem>
+					<para>
+						sets the web style, which determines the layout and presentation of the website. Valid values are <literal>1</literal> and <literal>2</literal>. Style 1 features a navigation pane at the left side of the screen that provides access to all of the documents on the site. Style 2 offers a breadcrumb-like navigation system.
+					</para>
+
+				</listitem>
+
+			</varlistentry>
+			
 			
 			<varlistentry>
 				<term><parameter>web_type</parameter></term>
