@@ -8,40 +8,6 @@
 	 <simpara>
 		<revhistory>
 			<revision>
-				<revnumber>3.2-3</revnumber>
-				 <date>Thu Jul 11 2013</date>
-				 <author>
-					<firstname>Zac</firstname>
-					 <surname>Dover</surname>
-					 <email>zdover@redhat.com</email>
-				</author>
-				 <revdescription>
-					<simplelist>
-					  <member>Replaced a broken link to kate plugins page on CPAN with a working link - BZ#973461
-					 </member>
-					</simplelist>
-
-				</revdescription>
-
-			</revision>
-			<revision>
-				<revnumber>3.2-2</revnumber>
-				 <date>Thu Jul 11 2013</date>
-				 <author>
-					<firstname>Zac</firstname>
-					 <surname>Dover</surname>
-					 <email>zdover@redhat.com</email>
-				</author>
-				 <revdescription>
-					<simplelist>
-					  <member>Added quotes around the web_formats list - BZ#839141
-					 </member>
-					</simplelist>
-
-				</revdescription>
-
-			</revision>
-			<revision>
 				<revnumber>3.2-1</revnumber>
 				 <date>Thu Jul 11 2013</date>
 				 <author>
@@ -52,6 +18,13 @@
 				 <revdescription>
 					<simplelist>
 					  <member>Added command prompts to all commands - BZ#880456</member>
+					  <member>Added quotes around the web_formats list - BZ#839141
+					 </member>
+					  <member>Replaced a broken link to kate plugins page on CPAN with a working link - BZ#973461
+					 </member>
+					 <member>Updated web site instructions - BZ#979224
+					 </member>
+					 
 					</simplelist>
 
 				</revdescription>
