@@ -171,29 +171,41 @@
 		</step>
 		<step>
 			<para>
-				Build and install the documents in each brand.
+				Build and install each brand, including the <application>Publican</application> <literal>common</literal> brand.
 			</para>
 			<substeps>
 				<step>
+					<para>
+						Change into the directory that holds the source for the brand.
+					</para>
+	
 					<screen><prompt>$</prompt><command>cd</command> <replaceable>brandsrc_dir</replaceable></screen>
 					
 				</step>
 				<step>
+					<para>
+						Build the brand.
+					</para>
 					<screen><prompt>$</prompt><command>publican build --formats=xml --langs=all --publish</command></screen>
 					
 				</step>
 				<step>
+					<para>
+						Install the brand on your website.
+					</para>
 					<screen><prompt>$</prompt><command>publican install_brand --web --path=</command><replaceable>path_to_site_root_dir</replaceable></screen>
 					<para>
 						Perform these steps for all brands.
 					</para>
 				</step>
-				<step>
-					<screen><prompt>$</prompt><command>publican update_site --site_config</command> <replaceable>path_to_site_cfg</replaceable></screen>
-				</step>
 			</substeps>
 		</step>
-		
+		<step>
+			<para>
+				Update the site.
+			</para>
+			<screen><prompt>$</prompt><command>publican update_site --site_config</command> <replaceable>path_to_site_cfg</replaceable></screen>
+		</step>
 	</procedure>
 	<para>
 		To make <application>Publican</application> refresh the site structure at any time, run: 
