@@ -51,6 +51,7 @@
   - Tweak equation formatting. BZ #804531
   - Fix POT-Creation-Date format. BZ #985836
   - Fix site stats report swapping languages and products.
+  - Updated web site instructions - BZ#979224
 
 3.1.5 Mon Mar 18 2013
   - Fix translated PDF encode issue when build from packaged books. BZ #922618
